[tool.poetry]
name = "dj-raw-sql"
version = "1.1.0"
description = "This is a Django wrapper to make it easier to write raw SQL queries."
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
readme = "README.md"
packages = [{include = "dj_raw_sql", from = "src"}]
license = "MIT"
maintainers = ["Roman <axeman.ofic@gmail.com>"]
repository = "https://github.com/axemanofic/dj-raw-sql"
keywords = ["python", "django"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django :: 3.2",
]


[tool.poetry.dependencies]
python = "^3.11"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.10"
django-stubs = "^1.13.1"
django-types = "^0.16.0"
pylint-django = "^2.5.3"
pre-commit = "^3.0.2"
commitizen = "^2.40.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.8"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
version_files = [
  "src/__version__.py",
  "pyproject.toml:^version",
]
