[tool.poetry]
name = "dj-raw-sql"
version = "2.0.0"
description = "This is a Django wrapper to make it easier to write raw SQL queries."
license = "MIT"
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
maintainers = ["Roman <axeman.ofic@gmail.com>"]
readme = "README.md"

repository = "https://github.com/axemanofic/dj-raw-sql"
documentation = "https://axemanofic.github.io/dj-raw-sql/"

keywords = ["python", "django"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django :: 3.2",
]


packages = [{include = "dj_raw_sql", from = "src"}]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
django-stubs = "^1.13.1"
django-types = "^0.16.0"
pre-commit = "^3.0.2"
commitizen = "^2.40.0"
ruff = "^0.0.249"
pyright = "^1.1.294"
coverage = "^7.1.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
tox = "^4.4.6"
tox-gh-actions = "^3.0.0"
mkdocs-material = "^9.0.8"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "dj_raw_sql"
version = "2.0.0"
version_files = [
  "src/__version__.py",
  "pyproject.toml:^version",
]
